Fix downloading pdfs with network service.

When the network service is enabled, we wouldn't download responses
that had a plugin associated with their mime type. This makes the
PluginResponseInterceptorUrlLoaderThrottle check if the response
is meant to be a download before intercepting it.

Bug: 855539
Change-Id: I8b70abb2a7e24c27b5a6866a0f09c24f59c12e05
Reviewed-on: https://chromium-review.googlesource.com/1119581
Commit-Queue: Robbie McElrath <rmcelrath@chromium.org>
Reviewed-by: Reilly Grant <reillyg@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572399}
Former-commit-id: a5adc4ec6539ec4f94986f0a0ba13108eaa218e3