content/browser/loader/download_utils_impl.cc
@@ -2,7 +2,7 @@
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
-#include "content/browser/loader/navigation_loader_util.h"
+#include "content/browser/loader/download_utils_impl.h"
 
 #include "content/public/browser/content_browser_client.h"
 #include "content/public/common/content_client.h"
@@ -10,13 +10,12 @@
 #include "net/http/http_response_headers.h"
 #include "third_party/blink/public/common/mime_util/mime_util.h"
 #include "url/gurl.h"
-#include "url/origin.h"
 
 namespace content {
-namespace navigation_loader_util {
+namespace download_utils {
 
 bool MustDownload(const GURL& url,
-                  net::HttpResponseHeaders* headers,
+                  const net::HttpResponseHeaders* headers,
                   const std::string& mime_type) {
   if (headers) {
     std::string disposition;
@@ -43,7 +42,7 @@ bool MustDownload(const GURL& url,
 }
 
 bool IsDownload(const GURL& url,
-                net::HttpResponseHeaders* headers,
+                const net::HttpResponseHeaders* headers,
                 const std::string& mime_type) {
   if (MustDownload(url, headers, mime_type))
     return true;
@@ -54,5 +53,5 @@ bool IsDownload(const GURL& url,
   return !headers || headers->response_code() / 100 == 2;
 }
 
-}  // namespace navigation_loader_util
+}  // namespace download_utils
 }  // namespace content
